fix: gap properties for safari

--- a/css/style.css
+++ b/css/style.css
@@ -877,7 +877,7 @@ template {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (500px)[2];
       grid-template-rows: repeat(2, 500px);
-  gap: 30px;
+  grid-gap: 30px;
 }
 
 .packages-card {
@@ -1438,7 +1438,7 @@ template {
         grid-template-columns: repeat(3, 300px);
     -ms-grid-rows: (500px)[2];
         grid-template-rows: repeat(2, 500px);
-    gap: 30px;
+    grid-gap: 30px;
   }
 }
 
@@ -1501,7 +1501,7 @@ template {
         grid-template-columns: repeat(2, 335px);
     -ms-grid-rows: (500px)[3];
         grid-template-rows: repeat(3, 500px);
-    gap: 30px;
+    grid-gap: 30px;
   }
   .packages-card__descr--detailed {
     padding: 35px 21px 25px 32px;
@@ -1631,7 +1631,7 @@ template {
         grid-template-columns: repeat(2, minmax(250px, max-content));
     -ms-grid-rows: (500px)[3];
         grid-template-rows: repeat(3, 500px);
-    gap: 10px;
+    grid-gap: 10px;
   }
   .newsletter {
     padding: 66px 0 77px;
@@ -1724,7 +1724,7 @@ template {
         grid-template-columns: 1fr;
     -ms-grid-rows: (500px)[4];
         grid-template-rows: repeat(4, 500px);
-    gap: 30px;
+    grid-gap: 10px;
   }
   .packages-card--detailed {
     display: none;
