--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,7 +13,7 @@
     &-wrapper
       grid-template-columns: repeat(3, 300px)
       grid-template-rows: repeat(2, 500px)
-      gap: 30px
+      grid-gap: 30px
 @media (max-width: 992px)
   .container
     max-width: 730px
@@ -53,7 +53,7 @@
     &-wrapper
       grid-template-columns: repeat(2, 335px)
       grid-template-rows: repeat(3, 500px)
-      gap: 30px
+      grid-gap: 30px
     &-card
       &__descr
         &--detailed
@@ -144,7 +144,7 @@
     &-wrapper
       grid-template-columns: repeat(2, minmax(250px, max-content))
       grid-template-rows: repeat(3, 500px)
-      gap: 10px
+      grid-gap: 10px
   .newsletter
     padding: 66px 0 77px
     &-wrapper
@@ -205,7 +205,7 @@
       display: grid
       grid-template-columns: 1fr
       grid-template-rows: repeat(4, 500px)
-      gap: 30px
+      grid-gap: 10px
     &-card
       &--detailed
         display: none
