--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -13,7 +13,7 @@
     display: grid
     grid-template-columns: repeat(3, 1fr)
     grid-template-rows: repeat(2, 500px)
-    gap: 30px
+    grid-gap: 30px
   &-card
     display: grid
     grid-template: repeat(2, 50%) / 1fr
